--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <img src="omen.jpg " width="100" alt="Omen" title="I am learning HTML5">
                <h3 style="color:orchid;">My Daily Schedule</h3>
                <p>Let me tell you how
-                <br> I.... learn html.</p>
+                <br> I learn php</p>
                 <ol>
                 <li>...I Learn more about web dev</li>
                 <li>...I plan out my schedule</li>
