--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <br> I learn php</p>
                 <ol>
                 <li>...I Learn more about web dev</li>
-                <li>...I plan out my schedule</li>
+                <li>...I watch turtorials</li>
                 <li>...I use resources</li>
                 </ol>
                 <hr>
