--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ol>
 
                 <li>...I want to learn more about programming</li>
-                <li>...I plan out my schedule</li>
+                <li>...I watch turtorials</li>
                 <li>...I use resources</li>
                 </ol>
                 <hr>
